MOBILE-4595 a11y: Fix contrast of today border

--- a/src/theme/theme.light.scss
+++ b/src/theme/theme.light.scss
@@ -174,7 +174,7 @@
 
     --core-collapsible-footer-background: var(--contrast-background);
 
-    --addon-calendar-today-border-color: var(--primary);
+    --addon-calendar-today-border-color: var(--dark);
     --addon-calendar-border-color: var(--stroke);
 
     --core-messages-message-bg: var(--white);
